static/styles/6.components/search.css
.search {
    position: relative;
}

.search__input {
    width: 100%;
    height: 40px;
    line-height: 30px;
    padding: 5px 20px 5px 40px;
    border-radius: 20px;
    background-color: var(--color-body);
    border: 1px solid transparent;
    background-image: url('/images/filter.svg');
    background-size: 20px;
    background-repeat: no-repeat;
    background-position: 10px center;
}

.search__reset {
    position: absolute;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    z-index: 10;
    width: 40px;
    height: 40px;
    mask-image: url('/images/close-thin.svg');
    mask-size: 12px;
    mask-repeat: no-repeat;
    mask-position: center;
    background-color: var(--color-icon-dark);
    opacity: 1;
    transition: all var(--duration-micro) var(--curve-fastInNormalOut);
}

.search__input:placeholder-shown + .search__reset{
    opacity: 0;
}

.search__reset:hover{
    background-color: var(--color-icon-dark-hover);
}

